force-app/main/default/objects/Credit_Application__c/Credit_Application__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending creation of automated Credit Application process***</description>
    <label>Credit Application</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Credit App #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>