force-app/main/default/objects/Credit_Application__c/fields/Name_of_Owner__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Owner__c</fullName>
    <label>Name of Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>